# Waitress

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: windows-build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  paths.rs  state.rs
src/lib/: actions.js  api.js  format.js  stores.js
src/lib/admin/: Activation.svelte  AdminApp.svelte  AdminsSection.svelte  BrandingSection.svelte  Dashboard.svelte  Login.svelte  MenuSection.svelte  NotificationsSection.svelte  PaymentsSection.svelte  Shell.svelte  SpecialsSection.svelte
src/lib/components/: Background.svelte  BusinessHeader.svelte  Button.svelte  ConfirmDialog.svelte  GlowCard.svelte  Heading.svelte  NavDock.svelte  ShinyText.svelte  ToastHost.svelte
src/lib/customer/: AdminPinDialog.svelte  CustomerApp.svelte  Home.svelte  ItemDetail.svelte  MenuTree.svelte  OrderSummary.svelte  PaymentScreen.svelte  StatusScreen.svelte  TodaysSpecialBanner.svelte  cart.js  voice.js
src/lib/kitchen/: Board.svelte  KitchenApp.svelte  MessageDialog.svelte  OrderCard.svelte
waitress-core/: Cargo.toml
waitress-core/src/: auth.rs  db.rs  lib.rs  models.rs  printing.rs  seed.rs
